# Machine-Learning

./: FYP Rubric 2024 v1.xlsx  Iris_data.ipynb  Lab - Decision trees (1).ipynb  Lab - Decision trees.html  Lab - Decision trees.ipynb  Lab3.ipynb  Lab4.ipynb  Pipfile  Untitled.ipynb  dataset_lab3.csv  introduction.ipynb
.ipynb_checkpoints/: DataAnalysis-checkpoint.ipynb
assignment/: machine_learning_assignment.ipynb  pyproject.toml  requirements.txt
experimenting/: Untitled.ipynb
kNN/: .~lock.Lab5_kNN.docx#  Lab5_2.ipynb  Lab5_kNN.docx  Untitled.ipynb
